<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kuangjia.MainActivity" >

<!--     <item -->
<!--         android:id="@+id/action_settings" -->
<!--         android:orderInCategory="100" -->
<!--         android:title="@string/action_settings" -->
<!--         app:showAsAction="never"/> -->
<!--     <item -->
<!--         android:id="@+id/action_search" -->
<!--         android:actionViewClass="android.widget.SearchView" -->
<!--         android:icon="@drawable/actionbar_search_icon" -->
<!--         android:showAsAction="ifRoom|collapseActionView" -->
<!--         android:title="@string/action_search"/> -->
    
    <item
        android:id="@+id/action_album"
        android:icon="@drawable/ofm_photo_icon"
        android:showAsAction="never"
        android:title="@string/action_album"/>
    <item
        android:id="@+id/action_collection"
        android:showAsAction="never"
        android:icon="@drawable/ofm_collect_icon"
        android:title="@string/action_collection"/>
    <item
        android:id="@+id/action_card"
        android:showAsAction="never"
        android:icon="@drawable/ofm_card_icon"
        android:title="@string/action_card"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:icon="@drawable/ofm_setting_icon"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_feed"
        android:showAsAction="never"
        android:icon="@drawable/ofm_feedback_icon"
        android:title="@string/action_feed"/>

</menu>
