<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/main_homelayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_icon_height"
        android:layout_alignParentBottom="true"
        android:background="#f9f9f9" >

        <RelativeLayout
            android:id="@+id/navi_item1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/name1"
                style="@style/main_navi_txt_style"
                android:text="@string/main_home" />
            
            <ImageView
                style="@style/main_navi_img_style"
                android:layout_above="@id/name1"
                android:src="@drawable/icon_home" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/navi_item2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/name2"
                style="@style/main_navi_txt_style"
                android:text="@string/main_instance" />
            
            <ImageView
                style="@style/main_navi_img_style"
                android:layout_above="@id/name2"
                android:src="@drawable/icon_home" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/navi_item3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/name3"
                style="@style/main_navi_txt_style"
                android:text="@string/main_others" />
            
            <ImageView
                style="@style/main_navi_img_style"
                android:layout_above="@id/name3"
                android:src="@drawable/icon_home" />
        </RelativeLayout>

<!--         <RelativeLayout -->
<!--             android:id="@+id/navi_item4" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="match_parent" -->
<!--             android:layout_weight="1" -->
<!--             android:clickable="true" > -->

<!--             <TextView -->
<!--                 android:id="@+id/name4" -->
<!--                 style="@style/main_navi_txt_style" -->
<!--                 android:text="@string/main_others" /> -->
            
<!--             <ImageView -->
<!--                 style="@style/main_navi_img_style" -->
<!--                 android:layout_above="@id/name4" -->
<!--                 android:src="@drawable/icon_home" /> -->
<!--         </RelativeLayout> -->
    </LinearLayout>

    <View
        android:id="@+id/div_line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_above="@id/main_homelayout"
        android:background="#DADADA" />
    
     <!-- 内容 -->
	<FrameLayout
	    android:id="@+id/content_frame"
	    android:layout_above="@id/div_line"
	    android:layout_alignParentTop="true"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />

</RelativeLayout>